; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/xen/extr_xen_intr.c_xen_intr_disable_source.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/xen/extr_xen_intr.c_xen_intr_disable_source.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intsrc = type { i32 }
%struct.xenisrc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.intsrc*, i32)* @xen_intr_disable_source to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xen_intr_disable_source(%struct.intsrc* %0, i32 %1) #0 {
  %3 = alloca %struct.intsrc*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.xenisrc*, align 8
  store %struct.intsrc* %0, %struct.intsrc** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.intsrc*, %struct.intsrc** %3, align 8
  %7 = bitcast %struct.intsrc* %6 to %struct.xenisrc*
  store %struct.xenisrc* %7, %struct.xenisrc** %5, align 8
  %8 = load %struct.xenisrc*, %struct.xenisrc** %5, align 8
  %9 = getelementptr inbounds %struct.xenisrc, %struct.xenisrc* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @evtchn_test_and_set_mask(i32 %10)
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  %14 = xor i1 %13, true
  %15 = zext i1 %14 to i32
  %16 = load %struct.xenisrc*, %struct.xenisrc** %5, align 8
  %17 = getelementptr inbounds %struct.xenisrc, %struct.xenisrc* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  ret void
}

declare dso_local i32 @evtchn_test_and_set_mask(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
